# CurvePlotter

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
include/: AboutCurvePlotter.hpp  BaseFunctions.hpp  CurvePlotterSettings.hpp  CurvePlotterWindow.hpp  CustomFunctionDialog.hpp
src/: AboutCurvePlotter.cpp  CurvePlotterSettings.cpp  CurvePlotterWindow.cpp  CustomFunctionDialog.cpp
